completed single song view added css fixed bugs with button visibility

--- a/style.css
+++ b/style.css
@@ -164,27 +164,17 @@ tr:nth-child(odd) {
   visibility: visible;
 }
 
-.hidden {
-  display: none;
-}
-
-.visible {
-  display: flex;
-}
-
 #singleSongViewContainer {
-  font: comicsans;
   text-align: center;
-  color: aliceblue;
-  display: inline-block;
+  color: rgb(0, 136, 255);
   border: solid;
   border-collapse: collapse;
   box-shadow: 5px 5px 5px 5px rgb(0, 0, 0);
-  width: 20%;
+  width: 30%;
   height: 500px;
   overflow-y: scroll;
   background-color: rgb(0, 0, 0);
-  margin: auto;
+  margin-left: 34%;
 }
 
 #playlistMath {
@@ -195,4 +185,22 @@ tr:nth-child(odd) {
   border-collapse: collapse;
   box-shadow: 0px 0px 0px 1px rgb(0, 0, 0);
   color: rgb(0, 0, 0);
+}
+
+#closeSongDetails {
+  padding: 10px;
+  border-radius: 10px;
+  width: 9%;
+  font-size: 15px;
+  font-family: cursive;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: flex;
 }
